test/testData/highlight/errors/type/f4.ml
(*
Error: This expression has type int but an expression was expected of type nativeint Hint: Did you mean `43n'?
*)
let _ : int32 * nativeint = 42l, 43;;